# discord-timestamp-generator

./: Cargo.toml  LICENSE.txt  package-lock.json  package.json  server_log.txt  verify_dark_mode.py
assets/: app.css  index.css
editor_llm_logs/: Gemini CLI 1  Gemini CLI 2
src/: frontend.rs  main.rs
templates/: app.html.jinja2  app.jinja2
