[package]
name = "discord-timestamp-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
minijinja = { version = "2.14.0", features = ["loader"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
minijinja-autoreload = "2.14.0"
tower-http = { version = "0.6.8", features = ["fs"] }
chrono = "0.4.42"
